--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "lipsum",
-  "title": "lipsum",
+  "title": "Lorem Ipsum Generator",
   "description": "Generate English / Japanese dummy text",
   "icon": "extension-icon.png",
   "author": "seita1996",
