--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "generate-english-dummy-text",
-      "title": "Generate English dummy text",
-      "subtitle": "Lorem Ipsum Generator",
-      "description": "Generates English dummy text based on the specified character count.",
+      "name": "generate-dummy-text",
+      "title": "Generate Dummy Text",
+      "description": "Generates Japanese or English dummy text.",
       "mode": "no-view",
       "arguments": [
         {
@@ -31,23 +30,32 @@
           "type": "text",
           "description": "Number of characters to generate",
           "placeholder": "Number of characters"
+        },
+        {
+          "name": "language",
+          "required": true,
+          "type": "dropdown",
+          "placeholder": "Select Language",
+          "data": [
+            { "title": "Japanese", "value": "ja" },
+            { "title": "English", "value": "en" }
+          ],
+          "description": "Language of the dummy text"
         }
       ]
-    },
+    }
+  ],
+  "preferences": [
     {
-      "name": "generate-japanese-dummy-text",
-      "title": "Generate Japanese dummy text",
-      "subtitle": "Lorem Ipsum Generator",
-      "description": "Generates Japanese dummy text based on the specified character count.",
-      "mode": "no-view",
-      "arguments": [
-        {
-          "name": "numberOfChars",
-          "required": false,
-          "type": "text",
-          "description": "Number of characters to generate",
-          "placeholder": "Number of characters"
-        }
+      "name": "defaultLanguage",
+      "title": "Default Language",
+      "description": "Default language for dummy text generation",
+      "type": "dropdown",
+      "required": false,
+      "default": "en",
+      "data": [
+        { "title": "Japanese", "value": "ja" },
+        { "title": "English", "value": "en" }
       ]
     }
   ],
