--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         },
         {
           "name": "language",
-          "required": true,
+          "required": false,
           "type": "dropdown",
           "placeholder": "Select Language",
           "data": [
